--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>p5.js in TypeScript</title>
-  </head>
-  <body>
-    <script src="dist/index.js"></script>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <title>Webpack App</title>
+    </head>
+    <body>
+        <h1>Hello world!</h1>
+        <h2>Tip: Check your console</h2>
+        <script src="dist/main.js"></script>
+    </body>
 </html>
