--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+
 <!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
     <title>p5.js in TypeScript</title>
   </head>
-  <body>
-    <script src="main.js"></script>
+  <body class="root">
+    <script src="dist/index.js"></script>
   </body>
 </html>
