--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>p5.js in TypeScript</title>
   </head>
-  <body class="root">
+  <body class="root" style="margin: 0; padding: 0;">
     <script src="dist/index.js"></script>
   </body>
 </html>
